--- a/my_styles/media.scss
+++ b/my_styles/media.scss
@@ -6,6 +6,9 @@
         padding: 2rem !important;
 
     }
+    header .left-header{
+        margin-left: 0 !important;
+    }
     .controls {
         top: auto;
         bottom: 0;
@@ -14,7 +17,7 @@
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
-        background-color: var(--color-white);
+        background-color: var(--color-grey2);
         .cont{
             margin: 1rem .3rem;
         }
