--- a/my_styles/styling.scss
+++ b/my_styles/styling.scss
@@ -7,11 +7,11 @@
 }
 
 :root {
-  --color-primary: #343434;
+  --color-primary:#2a2e35;
   --color-secondary: #e3b39b;
   --color-blue: #00094B;
   --color-white: #EDEADE;
-  --color-grey: #2a2e35;
+  --color-grey:  #343434;
   --color-grey2: #42413f;
   --br-sm-2: 14px;
 }
