--- a/my_styles/styling.scss
+++ b/my_styles/styling.scss
@@ -89,7 +89,7 @@ section {
   background-color: var(--color-blue) !important;
   transition: all .4s ease-in-out;
 i {
-  color: var(--color-grey2) !important;
+  color: var(--color-grey) !important;
 }
 
 }
@@ -108,7 +108,7 @@ i {
   box-shadow: var(--color-primary);
  i {
   font-size: 1.2rem;
-  color: var(--color-grey2);
+  color: var(--color-grey);
   pointer-events: none;
 }
 }
@@ -139,13 +139,14 @@ i {
   border-radius: var(--br-sm-2);
   height: 90%;
   width: 68%;
-  margin-left: 9.5rem;
+  margin-left: 10.5rem;
   background-color: var(--color-grey);
   transition: all .4s ease-in-out;
  img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  padding-left: 2.5rem;
   transition: all .4s ease-in-out;
   filter: grayscale(0);
   &:hover {
@@ -184,10 +185,11 @@ p{
 display: grid;
 grid-template-columns: repeat(2, 1fr);
 width: 100%;
-grid-gap: 9.5rem;
+height: 100%;
+grid-gap: 10.5rem;
  .left-about{
-   margin-left: -6rem;
-   margin-top: 3rem;
+   margin-left: -8rem;
+   margin-top: 3.5rem;
    line-height: 2.5rem;
    text-align: left;
    h1{
@@ -209,8 +211,8 @@ p{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    margin-top: .5rem;
-   margin-right: -15rem;;
-   grid-gap: 2.5rem;
+   margin-right: -14.5rem;;
+   grid-gap: 3rem;
    .about-con{
        border: 1px solid var(--color-grey2);
        border-radius: var(--br-sm-2);
@@ -244,7 +246,7 @@ p{
 }
 
 .about-stats{
-margin-left: -6rem;
+margin-left: -8rem;
 padding-bottom: 4rem;
 .progress-bars{
    display: grid;
@@ -345,7 +347,7 @@ align-items: center;
           padding: 1rem;
           font-weight: bold;
           color: var(--color-white);
-          text-align: left;
+          text-align: center;
       }
   }
 }
@@ -355,11 +357,11 @@ margin-top: -1.2rem;
 display: grid;
 grid-template-columns: repeat(3, 1fr);
 grid-template-rows: repeat(2, 1fr);
-grid-gap: 2rem;
+grid-gap: 3rem;
       .project-con{
         position: relative;
-        border: 1px solid var(--color-grey2);
-        border-radius: 5px;
+       border-radius: var(--br-sm-2);
+       
         transition: all .4s ease-in-out;
         height: 100%;
         width: 250px;
@@ -373,8 +375,9 @@ grid-gap: 2rem;
     
  img {
   width: 100%;
-  height: 100%;
+  height: 90%;
   object-fit: cover;
+  border-radius: var(--br-sm-2);
   transition: all .4s ease-in-out;
   filter: grayscale(0);
   &:hover {
