--- a/my_styles/styling.css
+++ b/my_styles/styling.css
@@ -56,6 +56,7 @@ section {
   background-color: var(--color-primary);
 }
 
+.nav-section,
 .home-section,
 .about-section,
 .project-section,
@@ -80,7 +81,7 @@ section {
 /*--------------icons----------------*/
 .controls {
   position: fixed;
-  z-index: 10;
+  z-index: 2;
   top: 50%;
   left: 3%;
   margin-left: 20px;
@@ -169,9 +170,10 @@ section {
   text-align: left;
   margin-left: 9.5rem;
   padding-top: -3rem;
-  line-height: 3rem;
+  line-height: 2rem;
 }
 .header-wrapper .left-header h1 {
+  line-height: 3rem;
   margin: 0;
   padding: 0;
   font-size: 2rem;
@@ -516,94 +518,108 @@ section {
 }
 
 @media screen and (max-width: 705px) {
+  /*--------------home-section----------------*/
   header {
     padding: 0;
   }
   header .left-header {
-    padding: 3rem !important;
+    padding: 0.5rem !important;
   }
   .header-wrapper {
     grid-template-columns: 1fr;
+    gap: 2rem;
     padding-bottom: 6rem;
   }
   .right-header {
     margin: 0;
-    width: 90%;
+    width: 100%;
   }
   .right-header .h-shape {
     display: none;
   }
   .left-header {
     grid-row: 1;
-    width: 90%;
-    margin-left: 2rem !important;
+    width: 100%;
+    margin-left: 0 !important;
+    line-height: 2rem !important;
   }
   .header-wrapper .right-header .img {
     margin: 0 auto;
-    width: 90%;
+    width: 100%;
     height: 100%;
-    margin-left: 4.8rem !important;
+    margin-left: 0 !important;
   }
+  /*--------------about-section----------------*/
   .about-wrapper {
     grid-template-columns: 1fr;
-    width: 90%;
+    width: 100%;
     grid-gap: 2.5rem !important;
+    margin-top: -2.5rem;
   }
   .left-about {
     grid-row: 1;
     margin: 0 auto;
-    margin-left: 5rem !important;
-    padding-top: 0.5rem;
+    margin-left: 0 !important;
   }
   .right-about {
     grid-template-columns: repeat(2, 1fr);
     margin: 0 auto;
-    width: 90%;
+    width: 100%;
+    max-width: 100px;
     padding-left: 0;
-    margin-left: 5rem !important;
+    margin-left: 0 !important;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .right-about p {
     padding-right: 0;
   }
   .about-stats {
-    margin-left: 5rem !important;
+    margin-left: 0 !important;
+    padding-bottom: 6rem;
   }
   .about-stats .progress-bars {
     grid-template-columns: 1fr;
   }
+  /*--------------projects-section----------------*/
   .project-wrapper {
     grid-template-columns: 1fr;
-    width: 90%;
+    grid-gap: 0.5rem !important;
+    margin-top: -2.5rem;
     padding-bottom: 6rem;
   }
-  .main-title h1 {
-    text-align: left;
-  }
-  .main-title p {
-    text-align: left;
+  .project-wrapper .main-title {
+    text-align: left !important;
   }
   .project-container {
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    width: 100%;
     margin: 0 auto;
-    margin-left: 10rem !important;
+    margin-left: 0 !important;
   }
-  .main-title3 h1 {
-    text-align: left;
-  }
-  .main-title3 p {
-    text-align: left;
-  }
+  /*--------------contact-section----------------*/
   .contact-info {
-    margin-left: 5rem !important;
+    margin-left: 0 !important;
   }
   .section {
     padding: 2rem 2.5rem;
   }
+  /*--------------icons----------------*/
   .controls {
     position: fixed;
-    z-index: 10;
-    top: 50%;
-    left: 3%;
+    z-index: 2;
+    top: auto;
+    bottom: 0;
+    left: 50%;
     margin-left: 0px;
+    flex-direction: initial;
+    justify-content: center;
+    transform: translateX(-50%);
+    width: 100%;
+    background-color: var(--color-grey);
+  }
+  .controls .cont {
+    margin: 1rem 0.3rem;
   }
 }/*# sourceMappingURL=styling.css.map */
