--- a/my_styles/media.scss
+++ b/my_styles/media.scss
@@ -1,5 +1,10 @@
 @media screen and (max-width: 705px){
   /*--------------home-section----------------*/
+  %common{
+    padding-bottom: 6rem;
+    margin-left: 0 !important;
+    grid-gap: 2.5rem !important;
+  }
   header{
       padding: 0;
   }
@@ -111,11 +116,9 @@ contact-wrapper{
   }
 
 .contact-info{
-  margin-left: 0 !important;
   grid-template-columns: 1fr;
   width: 100%;
-  grid-gap: 2.5rem !important;
-  padding-bottom: 6rem;
+  @extend %common;
 }
 
 .section{
