--- a/my_styles/styling.css
+++ b/my_styles/styling.css
@@ -518,6 +518,11 @@ section {
 
 @media screen and (max-width: 705px) {
   /*--------------home-section----------------*/
+  .contact-info {
+    padding-bottom: 6rem;
+    margin-left: 0 !important;
+    grid-gap: 2.5rem !important;
+  }
   header {
     padding: 0;
   }
@@ -622,11 +627,8 @@ section {
     text-align: left !important;
   }
   .contact-info {
-    margin-left: 0 !important;
     grid-template-columns: 1fr;
     width: 100%;
-    grid-gap: 2.5rem !important;
-    padding-bottom: 6rem;
   }
   .section {
     padding: 2rem 2.5rem;
