more trial on @extend usage

--- a/my_styles/media.scss
+++ b/my_styles/media.scss
@@ -14,8 +14,7 @@
   
 .header-wrapper{
   grid-template-columns: 1fr;
-  gap: 2rem;
-  padding-bottom: 6rem;
+  @extend %common;
 }
 .right-header{
   margin: 0;
