--- a/my_styles/media.css
+++ b/my_styles/media.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 705px) {
   /*--------------home-section----------------*/
-  .contact-info {
+  .contact-info, .header-wrapper {
     padding-bottom: 6rem;
     margin-left: 0 !important;
     grid-gap: 2.5rem !important;
@@ -13,8 +13,6 @@
   }
   .header-wrapper {
     grid-template-columns: 1fr;
-    gap: 2rem;
-    padding-bottom: 6rem;
   }
   .right-header {
     margin: 0;
